fixed mobile layout issue

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 	/* Typography */
 	--font-family: "Baloo 2", serif;
-	--font-size-base: clamp(0.9rem, 0.85rem + 0.25vw, 1.5rem);
+	--font-size-base: clamp(1rem, 0.85rem + 0.25vw, 1.5rem);
 	--font-size-h1: clamp(1.5rem, 1.4rem + 0.5vw, 2rem);
 	--font-size-h2: clamp(1.2rem, 1.15rem + 0.5vw, 1.7rem);
 	--font-size-input: clamp(1rem, 0.95rem + 0.25vw, 1.5rem);
@@ -39,11 +39,15 @@ button, input {
 	-webkit-tap-highlight-color: transparent;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
-	min-height: 100svh;
+	min-height: 100vh;
 	font-family: var(--font-family);
 	font-weight: 500;
 	color: var(--color-white);
@@ -348,7 +352,7 @@ input:-webkit-autofill:hover {
 }
 
 /* MEDIA QUERIES */
-@media (max-width: 400px) {
+@media (max-width: 425px) {
 	.stat-container {
 		flex-direction: column;
 	}
